# flashtap-server

./: .gitignore  CMakeLists.txt  Player.h  README.md  Source.cpp
.github/workflows/: debug-build-clang-14.yml  debug-build-clang-15.yml  debug-build-gcc-12.yml  minsizerel-build-clang-14.yml  minsizerel-build-clang-15.yml  minsizerel-build-gcc-12.yml  release-build-clang-14.yml  release-build-clang-15.yml  release-build-gcc-12.yml  relwithdebinfo-build-clang-14.yml  relwithdebinfo-build-clang-15.yml  relwithdebinfo-build-gcc-12.yml
.obsidian/: workspace.json
network/: ShooterServer.cpp  ShooterServer.h
release/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
release/release/: engine_log.txt  server  shooter_server
